src/test/ui/marker_trait_attr/marker-trait-with-associated-items.stderr
error: marker traits cannot have associated items
  --> $DIR/marker-trait-with-associated-items.rs:16:5
   |
LL |     const N: usize;
   |     ^^^^^^^^^^^^^^^

error: marker traits cannot have associated items
  --> $DIR/marker-trait-with-associated-items.rs:22:5
   |
LL |     type Output;
   |     ^^^^^^^^^^^^

error: marker traits cannot have associated items
  --> $DIR/marker-trait-with-associated-items.rs:28:5
   |
LL |     fn foo();
   |     ^^^^^^^^^

error: marker traits cannot have associated items
  --> $DIR/marker-trait-with-associated-items.rs:34:5
   |
LL |     const N: usize = 43;
   |     ^^^^^^^^^^^^^^^^^^^^

error: marker traits cannot have associated items
  --> $DIR/marker-trait-with-associated-items.rs:40:5
   |
LL |     type Output = ();
   |     ^^^^^^^^^^^^^^^^^

error: marker traits cannot have associated items
  --> $DIR/marker-trait-with-associated-items.rs:46:5
   |
LL |     fn foo() {}
   |     ^^^^^^^^^^^

error: aborting due to 6 previous errors

